# oci-fetcher

./: Cargo.toml  LICENSE  README.md
src/: image.rs  main.rs
