[package]
name = "oci-fetcher"
version = "0.1.3-alpha.0"
authors = ["Takashi IIGUNI <ad2314ce71926@gmail.com>"]
edition = "2018"
license = "MIT"
description = "oci-fetcher is cli tool about Fetching oci image"

[dependencies]
clap = "2.32"
serde = "1.0"
serde_derive = "1.0"
serde_json ="1.0"
flate2 = "1.0"
tar = "0.4"
reqwest = "0.9"
